[package]
name = "retls"
version = "0.1.0"
edition = "2018"
authors = ["Heyang Zhou <heyang.zhou@icloud.com>"]
description = "Re-encrypt TLS connection with a different certificate"
license = "MIT"
repository = "https://github.com/losfair/retls"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
structopt = "0.3"
pretty_env_logger = "0.4"
log = "0.4"
rustls = { version = "0.20.7", features = ["dangerous_configuration"] }
tokio-rustls = "0.23.4"
rustls-pemfile = "1.0.1"
